# techday2

./: docker-compose.yml
chirpfeed/: Dockerfile  Dockerfile-back  Dockerfile-ui  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
chirpfeed/prisma/: schema.prisma
chirpfeed/prisma/migrations/20250318194921_init/: migration.sql
chirpfeed/prisma/migrations/20250323193525_add_super_user/: migration.sql
chirpfeed/src/: App.tsx  index.css
chirpfeed/src/components/layout/: MainLayout.tsx
chirpfeed/src/components/post/: CommentForm.tsx  CreatePostForm.tsx  PostCard.tsx
chirpfeed/src/components/profile/: ProfileHeader.tsx
chirpfeed/src/lib/: api.ts
chirpfeed/src/pages/: Home.tsx  NotFound.tsx  PostDetail.tsx  Profile.tsx
chirpfeed/src/server/: index.ts
create_users/: README.md  pyproject-old.toml  pyproject.toml  report.md
create_users/src/create_users/: crew.py  main.py  react.py  react_new.py
create_users/src/create_users/config/: agents.yaml  react_agents.yaml  react_tasks.yaml  tasks.yaml
profile-folio-uploader/: Dockerfile  README.md  index.html  tailwind.config.ts
profile-folio-uploader/src/: App.tsx  index.css
profile-folio-uploader/src/components/: ImageUploader.tsx  ProfileForm.tsx
profile-folio-uploader/src/pages/: CreatePost.tsx  Index.tsx  NotFound.tsx
