[project]
name = "create_users"
version = "0.1.0"
description = "create-users using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.28.8",
]

[project.scripts]
create_users = "create_users.main:run"
run_crew = "create_users.main:run"
run_react = "create_users.main:react"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
